--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -36,5 +36,23 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <LinearLayout
+        android:id="@+id/upload_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#30000000"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:text="正在上传..."
+            android:textSize="15sp"
+            android:gravity="center"
+            android:background="#ffffff"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
